# CAP6.0

./: .gitignore  Help.pages  SetupCAP.sh
Grid/ROM/: BatchRun.sh
Hold/: BidimGaussFitter.cpp  BidimGaussFitter.hpp  CalibrationManager.cpp  CalibrationManager.hpp  EventFilterAliceV0.cpp  EventFilterAliceV0.hpp  EventManager.cpp  EventManager.hpp  ModelManager.cpp  ModelManager.hpp  MomentumGenerator.hpp  ParticleDbManager.cpp  ParticleDbManager.hpp  ParticleFilterAliceV0.hpp  ParticlePartition.hpp  StatStudyHistograms.cpp  StateManager.cpp  StateManager.hpp
Hold/Ampt/: AmptEventReader.cpp  AmptEventReader.hpp
Hold/BasicGen/: GaussianGeneratorTask.cpp  GaussianGeneratorTask.hpp  RadialBoostTask.cpp  RadialBoostTask.hpp  ResonanceGenerator.cpp  ResonanceGenerator.hpp
Hold/CollGeom/: AACollisionGenerator.cpp  AACollisionGenerator.hpp  CollisionGeometryAnalyzer.cpp  CollisionGeometryAnalyzer.hpp  CollisionGeometryGenerator.cpp  CollisionGeometryGenerator.hpp  NucleonNucleonCollisionGenerator.cpp  NucleusGenerator.cpp  NucleusGenerator.hpp
Hold/Glauber/: Glauber.cpp  Glauber.hpp  GlauberEvent.cpp  GlauberEvent.hpp  GlauberLinkDef.h  GlauberNucleon.cpp  GlauberNucleon.hpp  GlauberNucleus.cpp  GlauberNucleus.hpp  GlauberTask.cpp  GlauberTask.hpp
Hold/Hijing/: HijingEventReader.cpp  HijingEventReader.hpp
Pair3D/: ParticlePair3DAnalyzer.cpp  ParticlePair3DAnalyzer.hpp  ParticlePair3DDerivedHistogramCalculator.cpp  ParticlePair3DDerivedHistogramCalculator.hpp  ParticlePair3DDerivedHistos.cpp  ParticlePair3DDerivedHistos.hpp  ParticlePair3DHistos.cpp  ParticlePair3DHistos.hpp
homeBuild/: CMakeCache.txt  cmake_install.cmake
laptopBuild/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
src/: CMakeLists.txt
src/Base/: Aliases.cpp  Aliases.hpp  BaseLinkDef.h  CMakeLists.txt  CmdlineParser.cpp  CmdlineParser.hpp  Collection.hpp  CommandLineAna.cpp  CommandLineAna.hpp  Condition.cpp  Condition.hpp  Configuration.cpp  Configuration.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  Counter.cpp  Counter.hpp  DerivedHistoIterator.cpp  DerivedHistoIterator.hpp  EnvironmentVariables.cpp  EnvironmentVariables.hpp  Exceptions.cpp  Exceptions.hpp  Factory.hpp  FileIterator.cpp  FileIterator.hpp  Filter.cpp  Filter.hpp  HistogramGroup.cpp  HistogramGroup.hpp  HistogramSet.cpp  HistogramSet.hpp  HistogramTask.cpp  HistogramTask.hpp  Manager.cpp  Manager.hpp  MessageLogger.cpp  MessageLogger.hpp  NameHelpers.cpp  NameHelpers.hpp  (+32 more)
src/Exec/: CMakeLists.txt  ExecLinkDef.h  RunAnalysis.cpp  RunAnalysis.hpp  RunClosureAnalysis.cpp  RunSubSampleSum.cpp  RunSubSampleSum.hpp  TaskCreator.cpp  TaskCreator.hpp
src/NuDyn/: CMakeLists.txt  NuDynAnalyzer.cpp  NuDynAnalyzer.hpp  NuDynCalculator.cpp  NuDynCalculator.hpp  NuDynDerivedHistos.cpp  NuDynDerivedHistos.hpp  NuDynExceptions.cpp  NuDynExceptions.hpp  NuDynHistos.cpp  NuDynHistos.hpp  NuDynLinkDef.h  NuDynPlotter.cpp
src/ParticleDb/: CMakeLists.txt  ParticleDb.cpp  ParticleDb.hpp  ParticleDbExceptions.cpp  ParticleDbExceptions.hpp  ParticleDbLinkDef.h  ParticleDbParser.cpp  ParticleDbParser.hpp  ParticleDbParser_CS.cpp  ParticleDbParser_CS.hpp  ParticleDbTask.cpp  ParticleDbTask.hpp  ParticleDecayMode.cpp  ParticleDecayMode.hpp  ParticlePartition.cpp  ParticlePartition.hpp  ParticleType.cpp  ParticleType.hpp
src/Particles/: CMakeLists.txt  EfficiencyFilter.cpp  EfficiencyFilter.hpp  Event.cpp  Event.hpp  EventAccountant.cpp  EventAccountant.hpp  EventCountHistos.cpp  EventCountHistos.hpp  EventFilter.cpp  EventFilter.hpp  EventIterator.cpp  EventIterator.hpp  EventTask.cpp  EventTask.hpp  FilterCreator.cpp  FilterCreator.hpp  JetFilter.cpp  JetFilter.hpp  Particle.cpp  Particle.hpp  ParticleDecayMode.cpp  ParticleDecayMode.hpp  ParticleDecayer.cpp  ParticleDecayer.hpp  ParticleDecayerTask.cpp  ParticleDecayerTask.hpp  ParticleDigit.cpp  ParticleDigit.hpp  ParticleFilter.cpp  ParticleFilter.hpp  ParticlePairFilter.cpp  ParticlePairFilter.hpp  ParticlesExceptions.cpp  ParticlesExceptions.hpp  ParticlesLinkDef.h  RootChainManager.cpp  RootChainManager.hpp
src/Performance/: CMakeLists.txt  CalibrationProducer.cpp  CalibrationProducer.hpp  ClosureCalculator.cpp  ClosureCalculator.hpp  ClosureIterator.cpp  ClosureIterator.hpp  EfficiencyFunction.cpp  EfficiencyFunction.hpp  EventPlaneRandomizerTask.cpp  EventPlaneRandomizerTask.hpp  EventVertexRandomizerTask.cpp  EventVertexRandomizerTask.hpp  MeasurementSimulator.cpp  MeasurementSimulator.hpp  ParticlePerformanceHistos.cpp  ParticlePerformanceHistos.hpp  ParticleSimulator.cpp  ParticleSimulator.hpp  PerformanceAnalyzer.cpp  PerformanceAnalyzer.hpp  PerformanceLinkDef.h  ResolutionFunction.cpp  ResolutionFunction.hpp
src/Plotting/: BalFctPlotter.cpp  BalFctPlotter.hpp  CMakeLists.txt  CanvasConfiguration.cpp  CanvasConfiguration.hpp  CanvasGroup.cpp  CanvasGroup.hpp  DataGraph.cpp  DataGraph.hpp  FunctionGroup.cpp  FunctionGroup.hpp  GraphConfiguration.cpp  GraphConfiguration.hpp  LegendConfiguration.cpp  LegendConfiguration.hpp  Plotter.cpp  Plotter.hpp  PlottingLinkDef.h
src/Spherocity/: CMakeLists.txt  SpherocityAnalyzer.cpp  SpherocityAnalyzer.hpp  SpherocityCalculator.cpp  SpherocityCalculator.hpp  SpherocityExceptions.cpp  SpherocityExceptions.hpp  SpherocityHistos.cpp  SpherocityHistos.hpp  SpherocityLinkDef.h
src/Therminator/: CMakeLists.txt  Chemistry.cpp  Hypersurface.cpp  Hypersurface.hpp  Hypersurface_Lhyquid2D.cpp  Hypersurface_Lhyquid2D.hpp  Hypersurface_Lhyquid3D.cpp  Hypersurface_Lhyquid3D.hpp  Model.cpp  Model.hpp  Model_BWA.cpp  Model_BWA.hpp  Model_BlastWave.cpp  Model_BlastWave.hpp  Model_HadronGas.cpp  Model_HadronGas.hpp  Model_KrakowSFO.cpp  Model_KrakowSFO.hpp  Model_Lhyquid2DBI.cpp  Model_Lhyquid2DBI.hpp  Model_Lhyquid3D.cpp  Model_Lhyquid3D.hpp  TherminatorExceptions.cpp  TherminatorExceptions.hpp  TherminatorGenerator.cpp  TherminatorGenerator.hpp  TherminatorHistograms.cpp  TherminatorLinkDef.h
wsu/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
wsuBuild/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
(+407 files in other folders)
